--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
 gunicorn==19.8.1
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pymongo==3.6.1
+requests==2.19.1
 semantic-version==2.6.0
 toolz==0.8.2
+urllib3==1.23
 virtualenv==15.1.0
 Werkzeug==0.14.1
